--- a/views/Billing.ejs
+++ b/views/Billing.ejs
@@ -4,7 +4,7 @@
 
 <div class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1 wrapper">
+		<div class="col-10 offset-1 wrapper h-100">
 			<h1 class="single-title text-center">Billing Address</h1>
 			<form id="deliveryform" method="POST" action="" onsubmit="return saveBilling(event);">
 				<div class="row">
