--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -1,7 +1,7 @@
 <% include partials/head %>
 
 <script src="/scripts/cart.js"></script>
-<div class="container">
+<div class="container container-single">
 	<div id="alert" class="alert alert-warning alert-static w-100 mb-3" style="text-align: left;" role="alert">
 		This is the catalog available and it's options to tailour our reproductions to your needs. <br />
 		Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
