--- a/views/Tags.ejs
+++ b/views/Tags.ejs
@@ -7,7 +7,7 @@
 <div class="">
 	<form class="col-6 offset-3 mb-4" id="tags" method="GET" action="/Galerie/tags" onkeypress="preventEnter(event, this)" onsubmit="filterByTags(event)">
 		<label class="search-label control-label" style="color: var(--light-shade) !important;">Filter by tags</label>
-		<input class="form-control" type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
+		<input type="text" placeholder="Enter tags then press enter..." value="" data-role="tagsinput" id="tagInput" />
 		<span data-placeholder="Tags"></span>
 
 		<input type="submit" class="logbtn mb-2 mt-0" value="Filter" id="submit-tags" />
