--- a/views/User.ejs
+++ b/views/User.ejs
@@ -20,7 +20,7 @@
 		</div>
 
 
-		<div id="parameters" class="tab col-9 row" style="display: none;">
+		<div id="parameters" class="tab col-9" style="display: none;">
 				<div class="col-10 offset-1 wrapper">
 					<h1 class="single-title text-center">Account</h1>
 				<div id="alert" class="alert alert-warning alert-static w-100 mb-3" role="alert">
@@ -68,7 +68,7 @@
 				</div>
 				</div>
 		</div>
-		<div id="delivery" class="tab col-9 row">
+		<div id="delivery" class="tab col-9">
 			<div class="col-10 offset-1 wrapper">
 					<h1 class="single-title text-center">Delivery</h1>
 				<hr />
@@ -172,8 +172,8 @@
 			</div>
 		</div>
 
-		<div id="purchases" class="tab col-9 row" style="display: none;">
-						<div class="col-10 offset-1 p-0">
+		<div id="purchases" class="tab col-9" style="display: none;">
+			<div class="col-10 offset-1 p-0">
 				<table class="table table-striped table-hover mb-0">
 					<thead>
 						<tr>
