--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -15,7 +15,7 @@
 
 				<div class="form-group">
 					<label class="control-label">Description</label>
-					<textarea class="instructions-textarea" rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
+					<textarea rows="5" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 1, 2048);" required></textarea>
 					<span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
 				</div>
 
