--- a/views/About.ejs
+++ b/views/About.ejs
@@ -22,13 +22,13 @@
 
 			<ul class="footer-list text-center">
 				<li>
-					<a href="#!" class="social-btn"><i class="fab fa-instagram"></i></a>
+					<a href="#!" class="social-btn" target="_blank"><i class="fab fa-instagram"></i></a>
 				</li>
 				<li>
-					<a href="#!" class="social-btn"><i class="fab fa-facebook-f"></i></a>
+					<a href="https://www.facebook.com/abkarian.maral/" class="social-btn" target="_blank"><i class="fab fa-facebook-f"></i></a>
 				</li>
 				<li>
-					<a href="#!" class="social-btn"><i class="fab fa-pinterest-p"></i></a>
+					<a href="https://www.pinterest.fr/MaralAbkarian1/" class="social-btn" target="_blank"><i class="fab fa-pinterest-p"></i></a>
 				</li>
 			</ul>
 		</div>
@@ -84,7 +84,6 @@
 						<textarea
 							id="content"
 							onkeyup="Validate.String(this, 64, 2048);"
-							class="instructions-textarea"
 							style="min-height: 175px;"
 							name="content"
 							placeholder="Write your message here...."
@@ -104,14 +103,19 @@
 		</div>
 
 		<div id="bio" class="tab col-9" style="display: none;">
-			<div class="biography col-10 offset-1 row">
+			<div class="biography col-10 offset-1 row pb-0 pt-4">
+					<div class="bio-img-wrapper col-4" style="z-index: 0; ">
+						<img class="bio-img" src="/img/biopic.png" />
+					</div>
+					<div class="first-bio col-8">
+						<h1 class="square-title">Maral Abkarian</h1>
+						<p class="square-txt ml-3">
+							Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de
+							leur terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
+						</p>
+					</div>
 				<div class="bio-body col-10 offset-1">
-					<img class="bio-img" src="https://i.imgur.com/4rBbPSy.png" />
-					<h1 class="square-title">Maral Abkarian</h1>
-					<p class="square-txt ml-3">
-						Née durant la seconde moitié du XXème siècle, élevée entre Orient du Levant et Occident tricolore, établie sur trois continents, Maral a dans la continuité de ses ancêtres déracinés de
-						leur terre natale par le génocide arménien en 1915, vécu dans différentes contrées à travers le monde.
-					</p>
+				
 
 					<p class="square-txt">
 						C’est sous un beau jour printanier d’avril, qu’à peine sa mère débarqua au port de la cité phocéenne, faisant ses adieux à son Liban natal, qu’elle vit le jour. Dès son plus jeune âge,
@@ -145,7 +149,7 @@
 
 		<div id="blog" class="tab col-9">
 			<div class="container container-blog h-100 p-0 m-0">
-				<div class="col-10 offset-1 wrapper" id="container-blog">
+				<div class="col-10 offset-1 wrapper" style="z-index: 0;" id="container-blog">
 					<% if (locals.blogs){ %> <% Object.keys(locals.blogs).forEach(function (index) { %>
 					<div class="blog-row" id="<%= locals.blogs[index]._id %>">
 						<h3 class="blog-title"><a href="/Blog/<%= locals.blogs[index]._id %>"><%= locals.blogs[index].shorttitle %>...</a></h3>
