--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -2,7 +2,7 @@
 
 <script src="/scripts/shop/infiniteShops.js"></script>
 <script src="/scripts/cart.js"></script>
-    <div class="container container-single">
+    <div class="container container-single single-wrapper">
         <div id="container-shop">
             <h1 class="single-title text-center mt-2 p-2" style="color: var(--light-shade)">Original Painting</h1>
             <div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">
