--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -14,7 +14,7 @@
             
             <div class="form-group">
                 <label class="control-label">Description</label>
-                <textarea class="instructions-textarea" rows="5" id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
+                <textarea rows="5" id="content" name="content" class="blog-textarea" placeholder="Your item description here" onkeyup="Validate.String(this, 1, 2048);" required><%= locals.shop.content %></textarea>
                 <span id="i_content" class="form-info">Content must contain between 1 and 2048 characters</span>
             </div>
 
