--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -2,7 +2,7 @@
 
 <div class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1 wrapper">
+		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Modifier les images de l'accueil</h1>
 			<div id="alert" class="alert alert-info alert-static mb-3" role="alert">
 				Pensez à utiliser des images au format paysage...
