--- a/views/restricted/Gallery-post.ejs
+++ b/views/restricted/Gallery-post.ejs
@@ -3,7 +3,7 @@
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 <div class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1 wrapper">
+		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Ajouter une image à la galerie</h1>
 			<form id="gallery" method="POST" action="/api/gallery/post" enctype="multipart/form-data" onsubmit="postGallery(event);">
 				<hr />
