--- a/views/restricted/Orders.ejs
+++ b/views/restricted/Orders.ejs
@@ -8,8 +8,8 @@
 		<button class="tab-btn" onclick="openTab(this, 'all')">Toutes les commandes</button>
 	</div>
 	<div class="single-wrapper">
-		<div id="approval" class="tab col-10 offset-1">
-			<section class="purchase-section">
+		<div id="approval" class="tab col-md-10 offset-md-1">
+			<section class="purchase-section table-responsive">
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
@@ -36,8 +36,8 @@
 			</section>
 		</div>
 
-		<div id="all" class="tab col-10 offset-1" style="display: none;">
-			<section class="purchase-section">
+		<div id="all" class="tab col-md-10 offset-md-1" style="display: none;">
+			<section class="purchase-section table-responsive">
 				<table class="table table-striped table-hover">
 					<thead>
 						<tr>
