--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -2,7 +2,7 @@
 
 <div class="container container-single"> 
     <div class="single-wrapper">
-        <div class="col-10 offset-1 wrapper">
+      <div class="col-md-10 offset-md-1 wrapper">
         <h1 class="single-title text-center">Modifier un item de la boutique</h1>
         <form  id="shop" method="POST" action="/api/shop/patch/<%= locals.shop._id %>" enctype="multipart/form-data" onsubmit="patchShop(event, '<%= locals.shop._id %>');"> 
             <hr />
