--- a/views/restricted/Shop-post.ejs
+++ b/views/restricted/Shop-post.ejs
@@ -2,7 +2,7 @@
 
 <div class="container container-single">
 	<div class="single-wrapper">
-		<div class="col-10 offset-1 wrapper">
+		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Ajouter un item à la boutique</h1>
 			<form id="shop" method="POST" action="/api/shop/post" enctype="multipart/form-data" onsubmit="postShop(event);">
 				<hr />
