--- a/views/cgu.ejs
+++ b/views/cgu.ejs
@@ -3,7 +3,7 @@
 <div id="CGU" class="container container-single">
 	<div class="single-wrapper">
 		<div class="col-10 offset-1 content-wrapper p-5">
-			<h1 class="single-title text-center">MENTIONS LEGALES</h1>
+			<h1 class="single-title text-center" id="tos">MENTIONS LEGALES</h1>
 
 			<p style="text-align: justify;">
 				Conformément aux dispositions des articles 6-III et 19 de la Loi n° 2004-575 du 21 juin 2004 pour la Confiance dans l'économie numérique, dite L.C.E.N., nous portons à la connaissance des
@@ -230,7 +230,7 @@
 			</p>
 
 			<hr />
-			<h1 class="single-title text-center">CONDITIONS GENERALES DE VENTE</h1>
+			<h1 class="single-title text-center" id="sales">CONDITIONS GENERALES DE VENTE</h1>
 
 			<p>
 				Entre la Société ,
