added new alerts, removed unique id for static alerts

--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -83,7 +83,7 @@
 				<div class="col-10 offset-1 wrapper lostpw-container">
 					<div class="box-lostpw">
 						<h1 class="single-title text-center">Password Recovery</h1>
-						<div id="alert" class="alert alert-info alert-static" role="alert">
+						<div class="alert alert-info alert-static" role="alert">
 							We'll send you a mail with instructions to reset your password
 						</div>
 						<form class="col-8 offset-2 mt-5" id="lostpw" onsubmit="submitLostpw(event)" method="POST" action="/api/user/lostpw">
