--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -64,7 +64,7 @@
 
 			<div class="col-10 offset-1 wrapper" style="z-index: 0;">
 				<h1 class="single-title text-center">Delivery Informations</h1>
-				<div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">
+				<div class="alert alert-info alert-static w-100 mb-3" role="alert">
 									Make sure these informations are correct, if not, change them <a href="/User">HERE</a>
 								</div>
 				<div class="row">
