--- a/views/Catalog.ejs
+++ b/views/Catalog.ejs
@@ -2,7 +2,7 @@
 
 <script src="/scripts/cart.js"></script>
 <div class="container container-single">
-	<div id="alert" class="alert alert-warning alert-static w-100 mb-3" style="text-align: left;" role="alert">
+	<div class="alert alert-warning alert-static w-100 mb-3" style="text-align: left;" role="alert">
 		This is the catalog available and it's options to tailour our reproductions to your needs. <br />
 		Simply go to the <a target="_blank" href="/Galerie"><b>Gallery</b></a
 		>, click the <b>"See More" button</b> for the painting you're interested in, and down below you can chose what options you'd like
