--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -13,7 +13,7 @@
 		<form action="" method="POST" id="payment-form">
 			<label class="control-label" for="email">Email</label>
 			<input type="text" id="email" placeholder="Email address" required />
-			<div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">
+			<div class="alert alert-info alert-static w-100 mb-3" role="alert">
 				Email is needed for receipt and shipping updates
 			</div>
 			<label for="card-element" class="control-label">
