--- a/views/User.ejs
+++ b/views/User.ejs
@@ -23,7 +23,7 @@
 		<div id="parameters" class="tab col-9" style="display: none;">
 				<div class="col-10 offset-1 wrapper">
 					<h1 class="single-title text-center">Account</h1>
-				<div id="alert" class="alert alert-warning alert-static w-100 mb-3" role="alert">
+				<div class="alert alert-warning alert-static w-100 mb-3" role="alert">
 					Remember to keep these informations private
 				</div>
 								
@@ -151,7 +151,7 @@
 							</div>
 							<div class="col-md-12">
 								<label class="control-label">Country - ISO Code</label>
-								<div id="alert" class="alert alert-warning alert-static w-100 mb-3" role="alert">
+								<div class="alert alert-warning alert-static w-100 mb-3" role="alert">
 									We need this to properly state your country to the delivery services
 								</div>
 								
