--- a/views/restricted/Front-post.ejs
+++ b/views/restricted/Front-post.ejs
@@ -4,7 +4,7 @@
 	<div class="single-wrapper">
 		<div class="col-md-10 offset-md-1 wrapper">
 			<h1 class="single-title text-center">Modifier les images de l'accueil</h1>
-			<div id="alert" class="alert alert-info alert-static mb-3" role="alert">
+			<div class="alert alert-info alert-static mb-3" role="alert">
 				Pensez à utiliser des images au format paysage...
 			</div>
 			<% if (locals.front) { %> <% for (let index = 0; index < 5; index++) { %> <% if (locals.front[index] && locals.front[index].null != true) { %>
