--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -26,7 +26,7 @@
 			</div>
 
 			<% if (locals.order.status === "awaitingStripePayment") { %>
-			<div id="alert" class="alert alert-warning alert-static w-100" role="alert">
+			<div class="alert alert-warning alert-static w-100" role="alert">
 				This order has not been paid for - <a href="/Payment"><b>Go to CHECKOUT</b></a>
 			</div>
 			<% } %>
