--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -22,7 +22,7 @@
 			</div>
 
 			<% if (locals.order.status === "awaitingStripePayment") { %>
-			<div id="alert" class="alert alert-warning alert-static w-100" role="alert">
+			<div class="alert alert-warning alert-static w-100" role="alert">
 				This order has not been paid for - <a href="/Payment"><b>Go to CHECKOUT</b></a>
 			</div>
 			<% } %>
@@ -65,7 +65,7 @@
 
 		<div class="col-10 offset-1 wrapper">
 			<h1 class="single-title text-center">Delivery Informations</h1>
-			<div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not, change them <a href="/User">HERE</a></div>
+			<div class="alert alert-info alert-static w-100 mb-3" role="alert">Make sure these informations are correct, if not, change them <a href="/User">HERE</a></div>
 
 			<div class="row">
 				<div class="col-md-6">
