--- a/views/Shop.ejs
+++ b/views/Shop.ejs
@@ -5,7 +5,7 @@
     <div class="container container-single single-wrapper">
         <div id="container-shop">
             <h1 class="single-title text-center mt-2 p-2" style="color: var(--light-shade)">Original Painting</h1>
-            <div id="alert" class="alert alert-info alert-static w-100 mb-3" role="alert">
+            <div class="alert alert-info alert-static w-100 mb-3" role="alert">
 								We also sell great quality reproductions in all sizes and shapes, for more information check the <a href="/Catalog">Catalog</a>
 								</div>
             <div id="original" class="tab container-shop">
