--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -61,8 +61,11 @@
       </div>
 
       <div class="col-10 offset-1 text-center">
-        <div id="alert" class="alert alert-danger alert-static" role="alert">
+        <div class="alert alert-danger alert-static" role="alert">
             For references, check the catalog <a href="/Catalog" target="_blank">HERE</a>
+        </div>
+        <div class="alert alert-warning alert-static" role="alert">
+            Please note that the image might get cropped a bit depending on the format size you choose and the actual aspect ratio of the image, although we do our best to provide you with exact reproductions!
         </div>
         <div class="form-group pwinty-wrapper" id="categories">
             <label for="framed">
